[gd_scene load_steps=9 format=3 uid="uid://b67nebvv2l3ym"]

[ext_resource type="Script" uid="uid://k7vnma0npcy" path="res://Pause_Menu/Scripts/pause_menu.gd" id="1_wrcef"]
[ext_resource type="PackedScene" uid="uid://dysq0o5ouxrcq" path="res://Pause_Menu/map_node.tscn" id="2_jlo30"]

[sub_resource type="FontVariation" id="FontVariation_wrcef"]
spacing_glyph = 13

[sub_resource type="Gradient" id="Gradient_jlo30"]
offsets = PackedFloat32Array(0, 0.5275229, 1)
colors = PackedColorArray(1, 1, 1, 1, 0.46453014, 1.0308232, 1.3828433, 0.5137255, 0, 0.07654966, 0.6561392, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_durs7"]
gradient = SubResource("Gradient_jlo30")
width = 5
height = 5
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)

[sub_resource type="Animation" id="Animation_2kg7u"]
resource_name = "default"
length = 0.7
loop_mode = 2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.48000002, 0.7226667, 1, 0.49411765)]
}

[sub_resource type="Animation" id="Animation_b7ahj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_riw76"]
_data = {
&"RESET": SubResource("Animation_b7ahj"),
&"default": SubResource("Animation_2kg7u")
}

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_wrcef")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.17, 0.17, 0.17, 0.42352942)

[node name="ColorRect2" type="ColorRect" parent="Control"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 36.0
grow_horizontal = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="Control/ColorRect2"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -174.0
offset_top = -7.5
offset_right = -8.0
offset_bottom = 7.5
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0.180933, 0.096323855, 0.007172908, 1)
theme_override_fonts/font = SubResource("FontVariation_wrcef")
text = "PAUSED"
horizontal_alignment = 2

[node name="PauseScreen" type="Control" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 36.0
grow_horizontal = 2
grow_vertical = 2

[node name="Map" type="Control" parent="Control/PauseScreen"]
anchors_preset = 0
offset_left = 154.0
offset_top = 4.0
offset_right = 470.0
offset_bottom = 186.0

[node name="MapNode" parent="Control/PauseScreen/Map" instance=ExtResource("2_jlo30")]
modulate = Color(0.627451, 0, 0.85882354, 1)
layout_mode = 1
offset_left = 27.0
offset_top = 95.0
offset_right = 41.0
offset_bottom = 103.0
linked_scene = "uid://u4tw1sy12qpy"
entrance_right = Array[float]([2.666666666666667])

[node name="MapNode4" parent="Control/PauseScreen/Map" instance=ExtResource("2_jlo30")]
modulate = Color(0.88235295, 0.9411765, 0, 1)
layout_mode = 1
offset_left = 118.0
offset_top = 87.0
offset_right = 130.0
offset_bottom = 93.0
linked_scene = "uid://bwjdxhx24nxmj"
entrance_left = Array[float]([2.0])

[node name="MapNode2" parent="Control/PauseScreen/Map" instance=ExtResource("2_jlo30")]
modulate = Color(0.62616134, 0, 0.85979897, 1)
layout_mode = 1
offset_left = 80.0
offset_top = 87.0
offset_right = 117.0
offset_bottom = 104.0
linked_scene = "uid://yvy7ghlgdtpj"
entrance_right = Array[float]([15.0])
entrance_left = Array[float]([12.375])

[node name="MapNode3" parent="Control/PauseScreen/Map" instance=ExtResource("2_jlo30")]
modulate = Color(0.62616134, 0, 0.85979897, 1)
layout_mode = 1
offset_left = 42.0
offset_top = 87.0
offset_right = 79.0
offset_bottom = 104.0
linked_scene = "uid://clyywy8lxl56u"
entrance_right = Array[float]([12.270833333333332])
entrance_left = Array[float]([11.0])

[node name="PlayerIndicator" type="Control" parent="Control/PauseScreen/Map"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 0
offset_left = 33.0
offset_top = 101.0
offset_right = 33.0
offset_bottom = 101.0

[node name="TextureRect" type="TextureRect" parent="Control/PauseScreen/Map/PlayerIndicator"]
layout_mode = 0
offset_left = -3.0
offset_top = -3.0
offset_right = 3.0
offset_bottom = 3.0
texture = SubResource("GradientTexture2D_durs7")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/PauseScreen/Map/PlayerIndicator"]
libraries = {
&"": SubResource("AnimationLibrary_riw76")
}
autoplay = "default"

[node name="Label" type="Label" parent="Control/PauseScreen"]
layout_mode = 0
offset_left = 158.0
offset_top = 8.0
offset_right = 198.0
offset_bottom = 23.0
text = "Map"

[node name="Label2" type="Label" parent="Control/PauseScreen"]
layout_mode = 0
offset_left = 32.0
offset_top = 8.0
offset_right = 91.0
offset_bottom = 23.0
text = "Abilities"

[node name="SystemMenubutton" type="Button" parent="Control/PauseScreen"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 375.0
offset_top = 199.0
offset_right = 470.0
offset_bottom = 222.0
text = "System
"

[node name="SystemMenu" type="Control" parent="Control"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 38.0
offset_right = 1.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/SystemMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -137.0
offset_top = 28.0
offset_right = 122.0
offset_bottom = 238.0
grow_horizontal = 2
theme_override_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="Control/SystemMenu/VBoxContainer"]
layout_mode = 2

[node name="BackToMapButton" type="Button" parent="Control/SystemMenu/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Back To Map"

[node name="BackToTitleButton" type="Button" parent="Control/SystemMenu/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Back To Title"

[node name="Label" type="Label" parent="Control/SystemMenu/VBoxContainer"]
layout_mode = 2
text = "Audio Levels"

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/SystemMenu/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/SystemMenu/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "Music"

[node name="MusicSlider" type="HSlider" parent="Control/SystemMenu/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.05
value = 0.5

[node name="HBoxContainer3" type="HBoxContainer" parent="Control/SystemMenu/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/SystemMenu/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "SFX"

[node name="SFXSlider" type="HSlider" parent="Control/SystemMenu/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.05
value = 0.5

[node name="HBoxContainer4" type="HBoxContainer" parent="Control/SystemMenu/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/SystemMenu/VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "UI"

[node name="UISlider" type="HSlider" parent="Control/SystemMenu/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.05
value = 0.5
